# rust-intro-90min

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  book.toml  chapter_1.html  end-reco.html  end-resources.html  functions.html  index.html  landing.html  main.rs  move.html  mutable.html  primitives.html  print.html  printfn.html  result.html  scope.html  searchindex.js  searchindex.json  struct1.html  struct2-macros.html  struct3-print.html  struct4-impl.html  types-trait.html  types.html  types3.html  use-enums.html
.github/workflows/: deploy.yaml
benches-example/: Cargo.toml
benches-example/benches/: fib.rs  foo.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: async-stream.rs  collect-result_stream.rs  collect-stream.rs  collect-trystream.rs
lib/src/: lib.rs
lib/src/any/: mod.rs  tests.rs
rust-examples/: Cargo.toml
rust-examples/examples/: 11-trait.rs  12-asynctrait.rs  13-asref-deref.rs  20-iterator.rs  21-from.rs  30-instance_id_singleton.rs  backoff.rs  date.rs  errorhandling_errorchain.rs  errorhandling_thiserror.rs  mutable_function.rs  reqwest_mockito.rs
src/: SUMMARY.md  chapter_1.md  derive.md  end-reco.md  end-resources.md  functions.md  landing.md  move.md  mutable.md  primitives.md  print-struct.md  printfn.md  result.md  scope.md  struct1.md  struct2-macros.md  struct3-print.md  struct4-impl.md  types-trait.md  types.md  types3.md  use-enums.md
