[package]
authors = ["Simon Potzernheim <simon.potzernheim@eon.com>"]
edition = "2018"
name = "rust-examples"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
env_logger = { workspace = true }
error-chain = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
mockito = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
tokio-test = { workspace = true }
